--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,13 +6,13 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Статус" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Статус" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/info">
+    <ion-nav-view name="tab-info"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Задачи" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/list">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Задачи" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/orders">
+    <ion-nav-view name="tab-orders"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
