--- a/www/templates/order-detail.html
+++ b/www/templates/order-detail.html
@@ -3,7 +3,11 @@
   <ion-content class="padding">
 
     <p>
-      {{order.Id.address}}
+      {{allorders.address}}
     </p>
   </ion-content>
 </ion-view>
+
+<script>
+
+</script>
