--- a/www/templates/tab-info.html
+++ b/www/templates/tab-info.html
@@ -1,16 +1,24 @@
 <ion-view view-title="Статус">
-  <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Заданий за сегодня</div>
-      <div class="item item-body">
-        <div>
-          Получено <b>3</b>
-        </div>
-        <div>
-          Выполнено <b>1</b>
-        </div>
-      </div>
-    </div>
+	<ion-content>
+		<ion-list>
+			<ion-item class="item-divider">Заданий за сегодня</ion-item>
+			<ion-item class="item-icon-left">
+				Получено <span class="badge badge-assertive">5</span>
+			</ion-item>
+			<ion-item class="item-icon-left">
+				Выполнено <span class="badge badge-assertive">0</span>
+			</ion-item>
+		</ion-list>
 
-  </ion-content>
+		<ion-list>
+			<ion-item class="item-divider">Заданий за Месяц</ion-item>
+			<ion-item class="item-icon-left">
+				Получено <span class="badge badge-assertive">45</span>
+			</ion-item>
+			<ion-item class="item-icon-left">
+				Выполнено <span class="badge badge-assertive">10</span>
+			</ion-item>
+		</ion-list>
+
+	</ion-content>
 </ion-view>
