--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Настройки">
   <ion-content>
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
+    <ion-item >
+        В разработке
+    </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
