--- a/www/templates/tab-orders.html
+++ b/www/templates/tab-orders.html
@@ -7,9 +7,9 @@
 
                 <h2>{{order.name}}</h2>
 
-                <p>{{order.phone}}</p>
+                <p><a ng-href="tel:{{order.phone}}">{{order.phone}}</a></p>
                 <span class="badge badge-assertive">{{order.time}}</span>
-                <ion-option-button class="button-assertive" ng-click="remove(chat)">Пометить выполненым
+                <ion-option-button class="button-assertive" ng-click="remove(order)">Пометить выполненым
                 </ion-option-button>
 
             </ion-item>
