update detail page

--- a/www/templates/order-detail.html
+++ b/www/templates/order-detail.html
@@ -1,10 +1,26 @@
 
 <ion-view view-title="{{order.name}}">
-  <ion-content class="padding">
+  <ion-content>
+    <div class="list card">
+      <ion-item class="item item-icon-left">
+        <i class="icon ion-clock"></i>
+        {{order.time}}
+      </ion-item>
+      <ion-item class="item item-icon-left">
+        <i class="icon ion-home"></i>
+        {{order.address}}
+      </ion-item>
+      <ion-item class="item item-icon-left" ng-href="tel:{{order.phone}}">
+        <i class="icon ion-ios-telephone"></i>
+        {{order.phone}}
+      </ion-item>
 
-    <p>
-      {{allorders.address}}
-    </p>
+      <ion-item class="item item-body">
+        {{order.notes}}
+      </ion-item>
+    </div>
+
+
   </ion-content>
 </ion-view>
 
